@@ -1,102 +1,148 @@
 package net.minecraft.entity.monster;
 
+import java.util.Calendar;
+import javax.annotation.Nullable;
 import net.minecraft.block.Block;
-import net.minecraft.enchantment.Enchantment;
 import net.minecraft.enchantment.EnchantmentHelper;
-import net.minecraft.entity.*;
-import net.minecraft.entity.ai.*;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.EntityCreature;
+import net.minecraft.entity.EntityLiving;
+import net.minecraft.entity.EntityLivingBase;
+import net.minecraft.entity.EnumCreatureAttribute;
+import net.minecraft.entity.IEntityLivingData;
+import net.minecraft.entity.IRangedAttackMob;
+import net.minecraft.entity.SharedMonsterAttributes;
+import net.minecraft.entity.ai.EntityAIAttackMelee;
+import net.minecraft.entity.ai.EntityAIAttackRangedBow;
+import net.minecraft.entity.ai.EntityAIAvoidEntity;
+import net.minecraft.entity.ai.EntityAIFleeSun;
+import net.minecraft.entity.ai.EntityAIHurtByTarget;
+import net.minecraft.entity.ai.EntityAILookIdle;
+import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
+import net.minecraft.entity.ai.EntityAIRestrictSun;
+import net.minecraft.entity.ai.EntityAISwimming;
+import net.minecraft.entity.ai.EntityAIWander;
+import net.minecraft.entity.ai.EntityAIWatchClosest;
+import net.minecraft.entity.item.EntityBoat;
 import net.minecraft.entity.passive.EntityWolf;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.projectile.EntityArrow;
+import net.minecraft.entity.projectile.EntityTippedArrow;
 import net.minecraft.init.Blocks;
+import net.minecraft.init.Enchantments;
 import net.minecraft.init.Items;
-import net.minecraft.item.Item;
+import net.minecraft.init.MobEffects;
+import net.minecraft.init.SoundEvents;
+import net.minecraft.inventory.EntityEquipmentSlot;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.potion.Potion;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
 import net.minecraft.potion.PotionEffect;
 import net.minecraft.stats.AchievementList;
-import net.minecraft.util.BlockPos;
 import net.minecraft.util.DamageSource;
+import net.minecraft.util.EnumHand;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.datafix.DataFixer;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.DifficultyInstance;
+import net.minecraft.world.EnumDifficulty;
 import net.minecraft.world.World;
 import net.minecraft.world.WorldProviderHell;
-
-import java.util.Calendar;
+import net.minecraft.world.biome.Biome;
+import net.minecraft.world.biome.BiomeSnow;
+import net.minecraftforge.fml.relauncher.Side;
+import net.minecraftforge.fml.relauncher.SideOnly;
 
 public class EntitySkeleton extends EntityMob implements IRangedAttackMob
 {
-    private EntityAIArrowAttack aiArrowAttack = new EntityAIArrowAttack(this, 1.0D, 20, 60, 15.0F);
-    private EntityAIAttackOnCollide aiAttackOnCollide = new EntityAIAttackOnCollide(this, EntityPlayer.class, 1.2D, false);
+    private static final DataParameter<Integer> SKELETON_VARIANT = EntityDataManager.<Integer>createKey(EntitySkeleton.class, DataSerializers.VARINT);
+    private static final DataParameter<Boolean> SWINGING_ARMS = EntityDataManager.<Boolean>createKey(EntitySkeleton.class, DataSerializers.BOOLEAN);
+    private final EntityAIAttackRangedBow aiArrowAttack = new EntityAIAttackRangedBow(this, 1.0D, 20, 15.0F);
+    private final EntityAIAttackMelee aiAttackOnCollide = new EntityAIAttackMelee(this, 1.2D, false)
+    {
+        /**
+         * Resets the task
+         */
+        public void resetTask()
+        {
+            super.resetTask();
+            EntitySkeleton.this.setSwingingArms(false);
+        }
+        /**
+         * Execute a one shot task or start executing a continuous task
+         */
+        public void startExecuting()
+        {
+            super.startExecuting();
+            EntitySkeleton.this.setSwingingArms(true);
+        }
+    };
 
     public EntitySkeleton(World worldIn)
     {
         super(worldIn);
+        this.setCombatTask();
+    }
+
+    protected void initEntityAI()
+    {
         this.tasks.addTask(1, new EntityAISwimming(this));
         this.tasks.addTask(2, new EntityAIRestrictSun(this));
         this.tasks.addTask(3, new EntityAIFleeSun(this, 1.0D));
         this.tasks.addTask(3, new EntityAIAvoidEntity(this, EntityWolf.class, 6.0F, 1.0D, 1.2D));
-        this.tasks.addTask(4, new EntityAIWander(this, 1.0D));
+        this.tasks.addTask(5, new EntityAIWander(this, 1.0D));
         this.tasks.addTask(6, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
         this.tasks.addTask(6, new EntityAILookIdle(this));
         this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false, new Class[0]));
         this.targetTasks.addTask(2, new EntityAINearestAttackableTarget(this, EntityPlayer.class, true));
         this.targetTasks.addTask(3, new EntityAINearestAttackableTarget(this, EntityIronGolem.class, true));
-
-        if (worldIn != null && !worldIn.isRemote)
-        {
-            this.setCombatTask();
-        }
     }
 
     protected void applyEntityAttributes()
     {
         super.applyEntityAttributes();
-        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.25D);
+        this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.25D);
     }
 
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(13, new Byte((byte)0));
+        this.dataManager.register(SKELETON_VARIANT, Integer.valueOf(SkeletonType.NORMAL.func_190135_a()));
+        this.dataManager.register(SWINGING_ARMS, Boolean.valueOf(false));
     }
 
-    /**
-     * Returns the sound this mob makes while it's alive.
-     */
-    protected String getLivingSound()
+    protected SoundEvent getAmbientSound()
     {
-        return "mob.skeleton.say";
+        return this.func_189771_df().func_190136_d();
     }
 
-    /**
-     * Returns the sound this mob makes when it is hurt.
-     */
-    protected String getHurtSound()
+    protected SoundEvent getHurtSound()
     {
-        return "mob.skeleton.hurt";
+        return this.func_189771_df().func_190132_e();
     }
 
-    /**
-     * Returns the sound this mob makes on death.
-     */
-    protected String getDeathSound()
+    protected SoundEvent getDeathSound()
     {
-        return "mob.skeleton.death";
+        return this.func_189771_df().func_190133_f();
     }
 
     protected void playStepSound(BlockPos pos, Block blockIn)
     {
-        this.playSound("mob.skeleton.step", 0.15F, 1.0F);
+        SoundEvent soundevent = this.func_189771_df().func_190131_g();
+        this.playSound(soundevent, 0.15F, 1.0F);
     }
 
     public boolean attackEntityAsMob(Entity entityIn)
     {
         if (super.attackEntityAsMob(entityIn))
         {
-            if (this.getSkeletonType() == 1 && entityIn instanceof EntityLivingBase)
+            if (this.func_189771_df() == SkeletonType.WITHER && entityIn instanceof EntityLivingBase)
             {
-                ((EntityLivingBase)entityIn).addPotionEffect(new PotionEffect(Potion.wither.id, 200));
+                ((EntityLivingBase)entityIn).addPotionEffect(new PotionEffect(MobEffects.WITHER, 200));
             }
 
             return true;
@@ -124,12 +170,12 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
         if (this.worldObj.isDaytime() && !this.worldObj.isRemote)
         {
             float f = this.getBrightness(1.0F);
-            BlockPos blockpos = new BlockPos(this.posX, (double)Math.round(this.posY), this.posZ);
+            BlockPos blockpos = this.getRidingEntity() instanceof EntityBoat ? (new BlockPos(this.posX, (double)Math.round(this.posY), this.posZ)).up() : new BlockPos(this.posX, (double)Math.round(this.posY), this.posZ);
 
             if (f > 0.5F && this.rand.nextFloat() * 30.0F < (f - 0.4F) * 2.0F && this.worldObj.canSeeSky(blockpos))
             {
                 boolean flag = true;
-                ItemStack itemstack = this.getEquipmentInSlot(4);
+                ItemStack itemstack = this.getItemStackFromSlot(EntityEquipmentSlot.HEAD);
 
                 if (itemstack != null)
                 {
@@ -140,7 +186,7 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
                         if (itemstack.getItemDamage() >= itemstack.getMaxDamage())
                         {
                             this.renderBrokenItemStack(itemstack);
-                            this.setCurrentItemOrArmor(4, (ItemStack)null);
+                            this.setItemStackToSlot(EntityEquipmentSlot.HEAD, (ItemStack)null);
                         }
                     }
 
@@ -154,9 +200,9 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
             }
         }
 
-        if (this.worldObj.isRemote && this.getSkeletonType() == 1)
+        if (this.worldObj.isRemote)
         {
-            this.setSize(0.72F, 2.535F);
+            this.func_189769_b(this.func_189771_df());
         }
 
         super.onLivingUpdate();
@@ -169,9 +215,9 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
     {
         super.updateRidden();
 
-        if (this.ridingEntity instanceof EntityCreature)
+        if (this.getRidingEntity() instanceof EntityCreature)
         {
-            EntityCreature entitycreature = (EntityCreature)this.ridingEntity;
+            EntityCreature entitycreature = (EntityCreature)this.getRidingEntity();
             this.renderYawOffset = entitycreature.renderYawOffset;
         }
     }
@@ -191,62 +237,20 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
 
             if (d0 * d0 + d1 * d1 >= 2500.0D)
             {
-                entityplayer.triggerAchievement(AchievementList.snipeSkeleton);
+                entityplayer.addStat(AchievementList.SNIPE_SKELETON);
             }
         }
         else if (cause.getEntity() instanceof EntityCreeper && ((EntityCreeper)cause.getEntity()).getPowered() && ((EntityCreeper)cause.getEntity()).isAIEnabled())
         {
-            ((EntityCreeper)cause.getEntity()).func_175493_co();
-            this.entityDropItem(new ItemStack(Items.skull, 1, this.getSkeletonType() == 1 ? 1 : 0), 0.0F);
+            ((EntityCreeper)cause.getEntity()).incrementDroppedSkulls();
+            this.entityDropItem(new ItemStack(Items.SKULL, 1, this.func_189771_df() == SkeletonType.WITHER ? 1 : 0), 0.0F);
         }
     }
 
-    protected Item getDropItem()
+    @Nullable
+    protected ResourceLocation getLootTable()
     {
-        return Items.arrow;
-    }
-
-    /**
-     * Drop 0-2 items of this living's type
-     */
-    protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)
-    {
-        if (this.getSkeletonType() == 1)
-        {
-            int i = this.rand.nextInt(3 + p_70628_2_) - 1;
-
-            for (int j = 0; j < i; ++j)
-            {
-                this.dropItem(Items.coal, 1);
-            }
-        }
-        else
-        {
-            int k = this.rand.nextInt(3 + p_70628_2_);
-
-            for (int i1 = 0; i1 < k; ++i1)
-            {
-                this.dropItem(Items.arrow, 1);
-            }
-        }
-
-        int l = this.rand.nextInt(3 + p_70628_2_);
-
-        for (int j1 = 0; j1 < l; ++j1)
-        {
-            this.dropItem(Items.bone, 1);
-        }
-    }
-
-    /**
-     * Causes this Entity to drop a random item.
-     */
-    protected void addRandomDrop()
-    {
-        if (this.getSkeletonType() == 1)
-        {
-            this.entityDropItem(new ItemStack(Items.skull, 1, 1), 0.0F);
-        }
+        return this.func_189771_df().func_190129_c();
     }
 
     /**
@@ -255,26 +259,34 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
     protected void setEquipmentBasedOnDifficulty(DifficultyInstance difficulty)
     {
         super.setEquipmentBasedOnDifficulty(difficulty);
-        this.setCurrentItemOrArmor(0, new ItemStack(Items.bow));
+        this.setItemStackToSlot(EntityEquipmentSlot.MAINHAND, new ItemStack(Items.BOW));
     }
 
     /**
      * Called only once on an entity when first time spawned, via egg, mob spawner, natural spawning etc, but not called
      * when entity is reloaded from nbt. Mainly used for initializing attributes and inventory
      */
-    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata)
+    @Nullable
+    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, @Nullable IEntityLivingData livingdata)
     {
         livingdata = super.onInitialSpawn(difficulty, livingdata);
 
         if (this.worldObj.provider instanceof WorldProviderHell && this.getRNG().nextInt(5) > 0)
         {
             this.tasks.addTask(4, this.aiAttackOnCollide);
-            this.setSkeletonType(1);
-            this.setCurrentItemOrArmor(0, new ItemStack(Items.stone_sword));
-            this.getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue(4.0D);
+            this.func_189768_a(SkeletonType.WITHER);
+            this.setItemStackToSlot(EntityEquipmentSlot.MAINHAND, new ItemStack(Items.STONE_SWORD));
+            this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(4.0D);
         }
         else
         {
+            Biome biome = this.worldObj.getBiomeGenForCoords(new BlockPos(this));
+
+            if (biome instanceof BiomeSnow && this.worldObj.canSeeSky(new BlockPos(this)) && this.rand.nextInt(5) != 0)
+            {
+                this.func_189768_a(SkeletonType.STRAY);
+            }
+
             this.tasks.addTask(4, this.aiArrowAttack);
             this.setEquipmentBasedOnDifficulty(difficulty);
             this.setEnchantmentBasedOnDifficulty(difficulty);
@@ -282,14 +294,14 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
 
         this.setCanPickUpLoot(this.rand.nextFloat() < 0.55F * difficulty.getClampedAdditionalDifficulty());
 
-        if (this.getEquipmentInSlot(4) == null)
+        if (this.getItemStackFromSlot(EntityEquipmentSlot.HEAD) == null)
         {
             Calendar calendar = this.worldObj.getCurrentDate();
 
             if (calendar.get(2) + 1 == 10 && calendar.get(5) == 31 && this.rand.nextFloat() < 0.25F)
             {
-                this.setCurrentItemOrArmor(4, new ItemStack(this.rand.nextFloat() < 0.1F ? Blocks.lit_pumpkin : Blocks.pumpkin));
-                this.equipmentDropChances[4] = 0.0F;
+                this.setItemStackToSlot(EntityEquipmentSlot.HEAD, new ItemStack(this.rand.nextFloat() < 0.1F ? Blocks.LIT_PUMPKIN : Blocks.PUMPKIN));
+                this.inventoryArmorDropChances[EntityEquipmentSlot.HEAD.getIndex()] = 0.0F;
             }
         }
 
@@ -301,86 +313,120 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
      */
     public void setCombatTask()
     {
-        this.tasks.removeTask(this.aiAttackOnCollide);
-        this.tasks.removeTask(this.aiArrowAttack);
-        ItemStack itemstack = this.getHeldItem();
+        if (this.worldObj != null && !this.worldObj.isRemote)
+        {
+            this.tasks.removeTask(this.aiAttackOnCollide);
+            this.tasks.removeTask(this.aiArrowAttack);
+            ItemStack itemstack = this.getHeldItemMainhand();
 
-        if (itemstack != null && itemstack.getItem() == Items.bow)
-        {
-            this.tasks.addTask(4, this.aiArrowAttack);
-        }
-        else
-        {
-            this.tasks.addTask(4, this.aiAttackOnCollide);
+            if (itemstack != null && itemstack.getItem() == Items.BOW)
+            {
+                int i = 20;
+
+                if (this.worldObj.getDifficulty() != EnumDifficulty.HARD)
+                {
+                    i = 40;
+                }
+
+                this.aiArrowAttack.setAttackCooldown(i);
+                this.tasks.addTask(4, this.aiArrowAttack);
+            }
+            else
+            {
+                this.tasks.addTask(4, this.aiAttackOnCollide);
+            }
         }
     }
 
     /**
      * Attack the specified entity using a ranged attack.
      */
-    public void attackEntityWithRangedAttack(EntityLivingBase p_82196_1_, float p_82196_2_)
+    public void attackEntityWithRangedAttack(EntityLivingBase target, float p_82196_2_)
     {
-        EntityArrow entityarrow = new EntityArrow(this.worldObj, this, p_82196_1_, 1.6F, (float)(14 - this.worldObj.getDifficulty().getDifficultyId() * 4));
-        int i = EnchantmentHelper.getEnchantmentLevel(Enchantment.power.effectId, this.getHeldItem());
-        int j = EnchantmentHelper.getEnchantmentLevel(Enchantment.punch.effectId, this.getHeldItem());
-        entityarrow.setDamage((double)(p_82196_2_ * 2.0F) + this.rand.nextGaussian() * 0.25D + (double)((float)this.worldObj.getDifficulty().getDifficultyId() * 0.11F));
+        EntityTippedArrow entitytippedarrow = new EntityTippedArrow(this.worldObj, this);
+        double d0 = target.posX - this.posX;
+        double d1 = target.getEntityBoundingBox().minY + (double)(target.height / 3.0F) - entitytippedarrow.posY;
+        double d2 = target.posZ - this.posZ;
+        double d3 = (double)MathHelper.sqrt_double(d0 * d0 + d2 * d2);
+        entitytippedarrow.setThrowableHeading(d0, d1 + d3 * 0.20000000298023224D, d2, 1.6F, (float)(14 - this.worldObj.getDifficulty().getDifficultyId() * 4));
+        int i = EnchantmentHelper.getMaxEnchantmentLevel(Enchantments.POWER, this);
+        int j = EnchantmentHelper.getMaxEnchantmentLevel(Enchantments.PUNCH, this);
+        DifficultyInstance difficultyinstance = this.worldObj.getDifficultyForLocation(new BlockPos(this));
+        entitytippedarrow.setDamage((double)(p_82196_2_ * 2.0F) + this.rand.nextGaussian() * 0.25D + (double)((float)this.worldObj.getDifficulty().getDifficultyId() * 0.11F));
 
         if (i > 0)
         {
-            entityarrow.setDamage(entityarrow.getDamage() + (double)i * 0.5D + 0.5D);
+            entitytippedarrow.setDamage(entitytippedarrow.getDamage() + (double)i * 0.5D + 0.5D);
         }
 
         if (j > 0)
         {
-            entityarrow.setKnockbackStrength(j);
+            entitytippedarrow.setKnockbackStrength(j);
         }
 
-        if (EnchantmentHelper.getEnchantmentLevel(Enchantment.flame.effectId, this.getHeldItem()) > 0 || this.getSkeletonType() == 1)
+        boolean flag = this.isBurning() && difficultyinstance.func_190083_c() && this.rand.nextBoolean() || this.func_189771_df() == SkeletonType.WITHER;
+        flag = flag || EnchantmentHelper.getMaxEnchantmentLevel(Enchantments.FLAME, this) > 0;
+
+        if (flag)
         {
-            entityarrow.setFire(100);
+            entitytippedarrow.setFire(100);
         }
 
-        this.playSound("random.bow", 1.0F, 1.0F / (this.getRNG().nextFloat() * 0.4F + 0.8F));
-        this.worldObj.spawnEntityInWorld(entityarrow);
-    }
+        ItemStack itemstack = this.getHeldItem(EnumHand.OFF_HAND);
 
-    /**
-     * Return this skeleton's type.
-     */
-    public int getSkeletonType()
-    {
-        return this.dataWatcher.getWatchableObjectByte(13);
-    }
-
-    /**
-     * Set this skeleton's type.
-     */
-    public void setSkeletonType(int p_82201_1_)
-    {
-        this.dataWatcher.updateObject(13, Byte.valueOf((byte)p_82201_1_));
-        this.isImmuneToFire = p_82201_1_ == 1;
-
-        if (p_82201_1_ == 1)
+        if (itemstack != null && itemstack.getItem() == Items.TIPPED_ARROW)
         {
-            this.setSize(0.72F, 2.535F);
+            entitytippedarrow.setPotionEffect(itemstack);
+        }
+        else if (this.func_189771_df() == SkeletonType.STRAY)
+        {
+            entitytippedarrow.addEffect(new PotionEffect(MobEffects.SLOWNESS, 600));
+        }
+
+        this.playSound(SoundEvents.ENTITY_SKELETON_SHOOT, 1.0F, 1.0F / (this.getRNG().nextFloat() * 0.4F + 0.8F));
+        this.worldObj.spawnEntityInWorld(entitytippedarrow);
+    }
+
+    public SkeletonType func_189771_df()
+    {
+        return SkeletonType.func_190134_a(((Integer)this.dataManager.get(SKELETON_VARIANT)).intValue());
+    }
+
+    public void func_189768_a(SkeletonType p_189768_1_)
+    {
+        this.dataManager.set(SKELETON_VARIANT, Integer.valueOf(p_189768_1_.func_190135_a()));
+        this.isImmuneToFire = p_189768_1_ == SkeletonType.WITHER;
+        this.func_189769_b(p_189768_1_);
+    }
+
+    private void func_189769_b(SkeletonType p_189769_1_)
+    {
+        if (p_189769_1_ == SkeletonType.WITHER)
+        {
+            this.setSize(0.7F, 2.4F);
         }
         else
         {
-            this.setSize(0.6F, 1.95F);
+            this.setSize(0.6F, 1.99F);
         }
+    }
+
+    public static void func_189772_b(DataFixer p_189772_0_)
+    {
+        EntityLiving.func_189752_a(p_189772_0_, "Skeleton");
     }
 
     /**
      * (abstract) Protected helper method to read subclass entity data from NBT.
      */
-    public void readEntityFromNBT(NBTTagCompound tagCompund)
+    public void readEntityFromNBT(NBTTagCompound compound)
     {
-        super.readEntityFromNBT(tagCompund);
+        super.readEntityFromNBT(compound);
 
-        if (tagCompund.hasKey("SkeletonType", 99))
+        if (compound.hasKey("SkeletonType", 99))
         {
-            int i = tagCompund.getByte("SkeletonType");
-            this.setSkeletonType(i);
+            int i = compound.getByte("SkeletonType");
+            this.func_189768_a(SkeletonType.func_190134_a(i));
         }
 
         this.setCombatTask();
@@ -389,20 +435,17 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
     /**
      * (abstract) Protected helper method to write subclass entity data to NBT.
      */
-    public void writeEntityToNBT(NBTTagCompound tagCompound)
+    public void writeEntityToNBT(NBTTagCompound compound)
     {
-        super.writeEntityToNBT(tagCompound);
-        tagCompound.setByte("SkeletonType", (byte)this.getSkeletonType());
+        super.writeEntityToNBT(compound);
+        compound.setByte("SkeletonType", (byte)this.func_189771_df().func_190135_a());
     }
 
-    /**
-     * Sets the held item, or an armor slot. Slot 0 is held item. Slot 1-4 is armor. Params: Item, slot
-     */
-    public void setCurrentItemOrArmor(int slotIn, ItemStack stack)
+    public void setItemStackToSlot(EntityEquipmentSlot slotIn, @Nullable ItemStack stack)
     {
-        super.setCurrentItemOrArmor(slotIn, stack);
+        super.setItemStackToSlot(slotIn, stack);
 
-        if (!this.worldObj.isRemote && slotIn == 0)
+        if (!this.worldObj.isRemote && slotIn == EntityEquipmentSlot.MAINHAND)
         {
             this.setCombatTask();
         }
@@ -410,7 +453,7 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
 
     public float getEyeHeight()
     {
-        return this.getSkeletonType() == 1 ? super.getEyeHeight() : 1.74F;
+        return this.func_189771_df() == SkeletonType.WITHER ? 2.1F : 1.74F;
     }
 
     /**
@@ -418,6 +461,17 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
      */
     public double getYOffset()
     {
-        return this.isChild() ? 0.0D : -0.35D;
+        return -0.35D;
+    }
+
+    @SideOnly(Side.CLIENT)
+    public boolean isSwingingArms()
+    {
+        return ((Boolean)this.dataManager.get(SWINGING_ARMS)).booleanValue();
+    }
+
+    public void setSwingingArms(boolean swingingArms)
+    {
+        this.dataManager.set(SWINGING_ARMS, Boolean.valueOf(swingingArms));
     }
 }
