@@ -1,32 +1,60 @@
 package net.minecraft.entity.monster;
 
+import java.util.Random;
+import javax.annotation.Nullable;
 import net.minecraft.block.Block;
-import net.minecraft.entity.*;
-import net.minecraft.entity.ai.*;
+import net.minecraft.entity.EntityLiving;
+import net.minecraft.entity.EntityLivingBase;
+import net.minecraft.entity.EnumCreatureAttribute;
+import net.minecraft.entity.IEntityLivingData;
+import net.minecraft.entity.SharedMonsterAttributes;
+import net.minecraft.entity.ai.EntityAIAttackMelee;
+import net.minecraft.entity.ai.EntityAIHurtByTarget;
+import net.minecraft.entity.ai.EntityAILeapAtTarget;
+import net.minecraft.entity.ai.EntityAILookIdle;
+import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
+import net.minecraft.entity.ai.EntityAISwimming;
+import net.minecraft.entity.ai.EntityAIWander;
+import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.init.Items;
-import net.minecraft.item.Item;
+import net.minecraft.init.MobEffects;
+import net.minecraft.init.SoundEvents;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
 import net.minecraft.pathfinding.PathNavigate;
 import net.minecraft.pathfinding.PathNavigateClimber;
 import net.minecraft.potion.Potion;
 import net.minecraft.potion.PotionEffect;
-import net.minecraft.util.BlockPos;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.datafix.DataFixer;
+import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.EnumDifficulty;
 import net.minecraft.world.World;
-
-import java.util.Random;
+import net.minecraft.world.storage.loot.LootTableList;
 
 public class EntitySpider extends EntityMob
 {
+    private static final DataParameter<Byte> CLIMBING = EntityDataManager.<Byte>createKey(EntitySpider.class, DataSerializers.BYTE);
+
     public EntitySpider(World worldIn)
     {
         super(worldIn);
         this.setSize(1.4F, 0.9F);
+    }
+
+    public static void func_189774_d(DataFixer p_189774_0_)
+    {
+        EntityLiving.func_189752_a(p_189774_0_, "Spider");
+    }
+
+    protected void initEntityAI()
+    {
         this.tasks.addTask(1, new EntityAISwimming(this));
         this.tasks.addTask(3, new EntityAILeapAtTarget(this, 0.4F));
-        this.tasks.addTask(4, new EntitySpider.AISpiderAttack(this, EntityPlayer.class));
-        this.tasks.addTask(4, new EntitySpider.AISpiderAttack(this, EntityIronGolem.class));
+        this.tasks.addTask(4, new EntitySpider.AISpiderAttack(this));
         this.tasks.addTask(5, new EntityAIWander(this, 0.8D));
         this.tasks.addTask(6, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
         this.tasks.addTask(6, new EntityAILookIdle(this));
@@ -54,7 +82,7 @@ public class EntitySpider extends EntityMob
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(16, new Byte((byte)0));
+        this.dataManager.register(CLIMBING, Byte.valueOf((byte)0));
     }
 
     /**
@@ -73,55 +101,34 @@ public class EntitySpider extends EntityMob
     protected void applyEntityAttributes()
     {
         super.applyEntityAttributes();
-        this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(16.0D);
-        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.30000001192092896D);
+        this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(16.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.30000001192092896D);
     }
 
-    /**
-     * Returns the sound this mob makes while it's alive.
-     */
-    protected String getLivingSound()
+    protected SoundEvent getAmbientSound()
     {
-        return "mob.spider.say";
+        return SoundEvents.ENTITY_SPIDER_AMBIENT;
     }
 
-    /**
-     * Returns the sound this mob makes when it is hurt.
-     */
-    protected String getHurtSound()
+    protected SoundEvent getHurtSound()
     {
-        return "mob.spider.say";
+        return SoundEvents.ENTITY_SPIDER_HURT;
     }
 
-    /**
-     * Returns the sound this mob makes on death.
-     */
-    protected String getDeathSound()
+    protected SoundEvent getDeathSound()
     {
-        return "mob.spider.death";
+        return SoundEvents.ENTITY_SPIDER_DEATH;
     }
 
     protected void playStepSound(BlockPos pos, Block blockIn)
     {
-        this.playSound("mob.spider.step", 0.15F, 1.0F);
+        this.playSound(SoundEvents.ENTITY_SPIDER_STEP, 0.15F, 1.0F);
     }
 
-    protected Item getDropItem()
+    @Nullable
+    protected ResourceLocation getLootTable()
     {
-        return Items.string;
-    }
-
-    /**
-     * Drop 0-2 items of this living's type
-     */
-    protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)
-    {
-        super.dropFewItems(p_70628_1_, p_70628_2_);
-
-        if (p_70628_1_ && (this.rand.nextInt(3) == 0 || this.rand.nextInt(1 + p_70628_2_) > 0))
-        {
-            this.dropItem(Items.spider_eye, 1);
-        }
+        return LootTableList.ENTITIES_SPIDER;
     }
 
     /**
@@ -149,7 +156,7 @@ public class EntitySpider extends EntityMob
 
     public boolean isPotionApplicable(PotionEffect potioneffectIn)
     {
-        return potioneffectIn.getPotionID() == Potion.poison.id ? false : super.isPotionApplicable(potioneffectIn);
+        return potioneffectIn.getPotion() == MobEffects.POISON ? false : super.isPotionApplicable(potioneffectIn);
     }
 
     /**
@@ -158,18 +165,18 @@ public class EntitySpider extends EntityMob
      */
     public boolean isBesideClimbableBlock()
     {
-        return (this.dataWatcher.getWatchableObjectByte(16) & 1) != 0;
+        return (((Byte)this.dataManager.get(CLIMBING)).byteValue() & 1) != 0;
     }
 
     /**
      * Updates the WatchableObject (Byte) created in entityInit(), setting it to 0x01 if par1 is true or 0x00 if it is
      * false.
      */
-    public void setBesideClimbableBlock(boolean p_70839_1_)
+    public void setBesideClimbableBlock(boolean climbing)
     {
-        byte b0 = this.dataWatcher.getWatchableObjectByte(16);
+        byte b0 = ((Byte)this.dataManager.get(CLIMBING)).byteValue();
 
-        if (p_70839_1_)
+        if (climbing)
         {
             b0 = (byte)(b0 | 1);
         }
@@ -178,14 +185,15 @@ public class EntitySpider extends EntityMob
             b0 = (byte)(b0 & -2);
         }
 
-        this.dataWatcher.updateObject(16, Byte.valueOf(b0));
+        this.dataManager.set(CLIMBING, Byte.valueOf(b0));
     }
 
     /**
      * Called only once on an entity when first time spawned, via egg, mob spawner, natural spawning etc, but not called
      * when entity is reloaded from nbt. Mainly used for initializing attributes and inventory
      */
-    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata)
+    @Nullable
+    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, @Nullable IEntityLivingData livingdata)
     {
         livingdata = super.onInitialSpawn(difficulty, livingdata);
 
@@ -195,7 +203,7 @@ public class EntitySpider extends EntityMob
             entityskeleton.setLocationAndAngles(this.posX, this.posY, this.posZ, this.rotationYaw, 0.0F);
             entityskeleton.onInitialSpawn(difficulty, (IEntityLivingData)null);
             this.worldObj.spawnEntityInWorld(entityskeleton);
-            entityskeleton.mountEntity(this);
+            entityskeleton.startRiding(this);
         }
 
         if (livingdata == null)
@@ -204,17 +212,17 @@ public class EntitySpider extends EntityMob
 
             if (this.worldObj.getDifficulty() == EnumDifficulty.HARD && this.worldObj.rand.nextFloat() < 0.1F * difficulty.getClampedAdditionalDifficulty())
             {
-                ((EntitySpider.GroupData)livingdata).func_111104_a(this.worldObj.rand);
+                ((EntitySpider.GroupData)livingdata).setRandomEffect(this.worldObj.rand);
             }
         }
 
         if (livingdata instanceof EntitySpider.GroupData)
         {
-            int i = ((EntitySpider.GroupData)livingdata).potionEffectId;
+            Potion potion = ((EntitySpider.GroupData)livingdata).effect;
 
-            if (i > 0 && Potion.potionTypes[i] != null)
+            if (potion != null)
             {
-                this.addPotionEffect(new PotionEffect(i, Integer.MAX_VALUE));
+                this.addPotionEffect(new PotionEffect(potion, Integer.MAX_VALUE));
             }
         }
 
@@ -226,11 +234,11 @@ public class EntitySpider extends EntityMob
         return 0.65F;
     }
 
-    static class AISpiderAttack extends EntityAIAttackOnCollide
+    static class AISpiderAttack extends EntityAIAttackMelee
         {
-            public AISpiderAttack(EntitySpider p_i45819_1_, Class <? extends Entity > targetClass)
+            public AISpiderAttack(EntitySpider spider)
             {
-                super(p_i45819_1_, targetClass, 1.0D, true);
+                super(spider, 1.0D, true);
             }
 
             /**
@@ -251,17 +259,17 @@ public class EntitySpider extends EntityMob
                 }
             }
 
-            protected double func_179512_a(EntityLivingBase attackTarget)
+            protected double getAttackReachSqr(EntityLivingBase attackTarget)
             {
                 return (double)(4.0F + attackTarget.width);
             }
         }
 
-    static class AISpiderTarget<T extends EntityLivingBase> extends EntityAINearestAttackableTarget
+    static class AISpiderTarget<T extends EntityLivingBase> extends EntityAINearestAttackableTarget<T>
         {
-            public AISpiderTarget(EntitySpider p_i45818_1_, Class<T> classTarget)
+            public AISpiderTarget(EntitySpider spider, Class<T> classTarget)
             {
-                super(p_i45818_1_, classTarget, true);
+                super(spider, classTarget, true);
             }
 
             /**
@@ -276,27 +284,27 @@ public class EntitySpider extends EntityMob
 
     public static class GroupData implements IEntityLivingData
         {
-            public int potionEffectId;
+            public Potion effect;
 
-            public void func_111104_a(Random rand)
+            public void setRandomEffect(Random rand)
             {
                 int i = rand.nextInt(5);
 
                 if (i <= 1)
                 {
-                    this.potionEffectId = Potion.moveSpeed.id;
+                    this.effect = MobEffects.SPEED;
                 }
                 else if (i <= 2)
                 {
-                    this.potionEffectId = Potion.damageBoost.id;
+                    this.effect = MobEffects.STRENGTH;
                 }
                 else if (i <= 3)
                 {
-                    this.potionEffectId = Potion.regeneration.id;
+                    this.effect = MobEffects.REGENERATION;
                 }
                 else if (i <= 4)
                 {
-                    this.potionEffectId = Potion.invisibility.id;
+                    this.effect = MobEffects.INVISIBILITY;
                 }
             }
         }
